# kkrd

./: .gitignore  Cargo.toml  README.md  local.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/wgpuapplication/: MainActivity.kt
lib/: Cargo.toml
lib/src/: app_events.rs  assets.rs  batching.rs  camera.rs  color.rs  config.rs  device.rs  fpslimiter.rs  gameloop.rs  graphic.rs  lib.rs  pipelines.rs  post_processing.rs  quad.rs  render_pass.rs  render_queues.rs  shaders.rs  texture copy.rs  texture.rs  time.rs  utils.rs  y_sort.rs
lib/src/shaders/: blit.wgsl  camera-bind-group.wgsl  error.wgsl  glitch.wgsl  grayscale.wgsl  msaa_shader.wgsl  sprite.wgsl  tonemapping.wgsl  vertex-shader.wgsl
src/: app_events.rs  assets.rs  batching.rs  camera.rs  color.rs  config.rs  device.rs  ex.rs  fpslimiter.rs  gameloop.rs  gg.rs  graphic.rs  lib.rs  pipelines.rs  post_processing.rs  quad.rs  rect.rs  render_queues.rs  shaders.rs  texture copy.rs  texture.rs  time.rs  utils.rs
