[package]
name = "kkrd"
version = "0.1.0"
edition = "2024"
resolver = "2"

[lib]
name = "wgpu_android_lib"
crate-type = ["cdylib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "wgpu_android"
path = "src/lib.rs"

[dependencies]
log = "0.4.27"
once_cell = "1.21.3"
pollster = "0.4.0"
ahash = "0.8.12"
smallvec = "1.15.1"
anyhow = "1.0.98"
ordered-float = "5.0.0"
itertools = "0.14.0"
parking_lot = "0.12.4"

async-trait = "0.1.88"

spin_sleep = "1.0"

wgpu = "24.0.1"
glam = "0.30.4"
bytemuck = { version = "1.23.1", default-features = false, features = ["derive"] }

image = { version = "0.25.5", default-features = false, features = [
  "png",
  "jpeg",
] }

tokio = { version = "*", features = ["full"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
winit = { version = "0.30.9", features = ["android-native-activity"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.8"
winit = "0.30.9"